--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Awesomej26
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: I am the destroyer of Worlds
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSMQNnlBionbMQKR0E3Jgpu_vQKYGgKvclIwjZu6-M3lijl9rxe
 
 #
 # Flags below are optional
