--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Awesomej26
 
 # Short bio or description (displayed in the header)
-description: I am the destroyer of Worlds
+description: I AM THE DESTROYER OF WORLDS!!!
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSMQNnlBionbMQKR0E3Jgpu_vQKYGgKvclIwjZu6-M3lijl9rxe
